--- a/config/database.yml
+++ b/config/database.yml
@@ -1,12 +1,8 @@
-# SQLite version 3.x
-#   gem install postgresql
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
 development:
   adapter: postgresql
   database: mangomilk_development
   pool: 5
+  host: localhost
   timeout: 5000
 
 # Warning: The database defined as "test" will be erased and
